slurm-5118671_6.out
/var/spool/slurm/slurmd/job5118671/slurm_script: line 9: /home/s/sutton/njqgame/RLENV/bin/activate: No such file or directory
6
Current working directory is /gpfs/fs0/scratch/s/sutton/njqgame/OffpolicyAlgorithms
Running on hostname nia1214.scinet.local

Starting run at: Wed Apr  7 14:06:18 EDT 2021
  File "Learning.py", line 12
    def learn(config: Configuration):
                    ^
SyntaxError: invalid syntax
Program test finished with exit code 1 at: Wed Apr  7 14:06:18 EDT 2021
